<resources>
    <string name="app_name">Langren</string>
    <string name="roomListName">房间列表</string>
    <string name="endRecorder">结束发言 </string>
    <string name="game_rule">
        狼人与新月 《狼人与新月》是桌游《狼人》的第二代，是一款经典的桌上游戏，
        是杀人游戏中的一种。此作在前作的基础上新加了新月事件卡牌（名称中的“新月”就是这么来的了）
        和5张角色牌：白痴、长老、替罪羊、守卫、吹笛者等角色。以下为在第一代的基础上新加入的角色：
        白痴∶如果村民在投票表决后发现疑犯是个白痴，他们立刻意识到了错误，并释放了他。
        白痴玩家翻开他的卡片，之后可以继续进行游戏，但是失去了投票的资格。若白痴因为狼人、猎人、女巫等被杀害，
        依然会死亡。(白痴属于"村民"阵营。)长老∶作为村庄里元老级的人物，长老在第一次受到狼人袭击时，并不会死亡
        。只有第二次被袭击时才会死亡。不过，如果长老是被村民误杀的〔例如∶投票表决、猎人的子弹、女巫的毒药〕，
        作为一个莫大的教训，所有的村民都将失去他们的特殊能力。〔如果白痴玩家的身份卡已经翻开，则他将离开游戏〕
        如果长老被狼人杀死时被女巫的灵药救活了，则只能恢复一条命。(长老属于"村民"阵营。)替罪羊∶村名们在投票表决的时候，
        如果出现超过一个玩家得到最多指控数的情况，另可错杀也不漏杀的村民，就会处决替罪羊。为了不再发生同样的悲剧
        ，被处决的替罪羊，能够指定哪些村民可以参加第二天的投票表决。(替罪羊属于"村民"阵营。)守卫∶每晚守卫会在狼人之前被叫醒，
        暗中指定1个玩家。〔主持人需查看被守卫玩家的身份卡片〕该玩家在当晚会受到保护，不会被狼人杀害。
        （小女孩不可以被守卫保护）守卫不可以连续两个晚上守护同一个人，守卫可以守护自己。(守卫属于"村民"阵营。)
        吹笛者∶吹笛者曾经被赶出村庄，多年以后以另一个身份回到村庄报仇。每晚吹笛者会在女巫之后被叫醒，然后选择迷惑两个村民。
        〔吹笛者不能迷惑自己〕主持人以手轻碰吹笛者指定的两人，示意他们已经被迷惑了。之后，
        主持人说 ∶“吹笛者闭上眼睛”，吹笛者玩家就闭上眼睛。接着主持人说 ∶“所有被迷惑的人醒来 ”，
        所有被迷惑的玩家都睁开眼睛，相互确认。最后主持人说∶“所有被迷惑的人闭上眼睛”，所有被迷惑的人都闭上眼睛
        。如果除吹笛者之外所有存活的玩家都已经被迷惑，吹笛者就达到了报仇的目的从而赢得游戏
        。注意被迷惑的玩家仍然保持他们的能力。(吹笛者不属于"村民"阵营，吹笛者单独属于一个阵营。)
        新月事件由晚上死去的最后一个玩家或者主持人随机抽选出一张事件卡，并大声喧读出事件卡上的内容。
        也可由主持人决定在游戏开始就使用一张或者两张暗月（永久生效）事件卡来进游戏，事件总共分为三类：
        ★满月（仅当前回合及时生效）●Miracle 奇迹最后一个受害者并没有真正的被杀死。她只是被狼人打中头部晕倒了，
        而这恰恰救了她。她恢复了意识并且马上回到了村子，但仅仅是以村民的身份。●Bleak Monday 乏味的周一这是悲哀
        的，平静的一天。并没有什么不寻常的事情发生。这是正常的一个回合，除非主持人决定使用“不论什么情况，都绝对
        不是他！”这个变体规则。该变体规则为“投票之后，没有得到票的那个人被吊死”具体如下：所有人都站起来，
        ，他要指出一个他认为是无辜的人，然后被担保的人坐下来再去担保其他的玩家，直到剩下最后一个没有得到担保的玩家
        ，这个最后一个站着的人将会被处死。第一个担保别人的玩家要一直站着直至他被人担保。●Not Me – Nor Wolf 没有
        我，也没有狼因为迷信，村民们不再说“狼”或者是“我”这两个词。任何违反了规则的玩家将在投票阶段丧失他的投
        票权。●Spiritualism 招魂术 （共五张）村里的招魂师（刚刚死去的玩家左手边的那个玩家）召唤了第一个被狼人杀
        死的亡魂，招魂师将会从如下问题中选一个询问亡魂：l 预言家已经发现了至少一个狼人了吗？l 有狼人互相挨着吗？
        狼人之中有没有人穿戴着至少一件明显可见的首饰？l 我是狼人吗？n 我即将要指出的两个人，是不是一个阵营的？n
        是否至少有一只狼人戴着眼镜？n 女巫是个男人吗？n 村长是普通的村民吗？u 狼人之中有穿着牛仔裤的吗？u 狼人之
        中有穿着黑上衣的吗？u 所有狼人都是男性玩家吗？u 所有狼人都是女性玩家吗？ü 我是一个普通的村民吗？ü 狼人
        之中有村长吗？ü 狼人之中有住在此处的吗？ü 狼人之中有吸烟者吗？2 狼人之中有男人吗？2 狼人之中有女人吗？2
        我即将要指出的那个人两边的两个人中，是不是有一个是狼人？2 我即将要指出的那个人，是不是普通的村民？（亡
        魂只能如实回答是与不是）●Luncheon for Seniors 年长者的午宴老手们将在隔壁村子里“年长者的宴会”中度过他
        们的一天，直到日落前不会回来。（所有玩家报出年龄，然后所有游戏者中年龄偏大的那半数玩家被称为“年长者”
        ）在他们回来之前，他们既不参与发言也不参与投票。那些“年轻者”也不可以投票给他们。●End of the Harvest
        收获结束所有人都有些累了；没什么特别的事情发生。这是正常的一个回合，除非主持人决定使用“收获节”这个变
        体规则。该变体规则为“有能力的角色能力发生改变”，具体如下：l 狼人只能吞食他隔壁的玩家l 先知可以像往常
        一样指定一个人查看身份，但主持人出示的将是被先知指定者、以及被指定者左右两　边，共三张身份牌，并且不能
        告诉先知哪个是被指定者的身份牌l 猎人反击的对象只能是他隔壁的玩家l 小女孩不能在狼人的环节偷看，而只能在
        女巫的环节偷看l 小偷在交换身份时，将会指定一个玩家并与之交换身份，而不是去交换多出来的两张身份牌l 村长
        须在所有人投票之前投票l 替罪羊在出现平局的时候不会替死，取而代之的是替罪羊隔壁的两位玩家之一，该死者由
        村民投票选　出，新死者不能执行替罪羊的能力l 白痴没有变化l 女巫只能使用一瓶药，并且当女巫决定用药的时候，由主持者掷游戏盒决定：- 当盒盖盒底都是里面向上的情况下，则为解药；- 当盒盖的里面和盒底的表面向上的情况下，则为解药，并且将服药者转化为一般村民；- 当盒盖的表　面和盒底的里面向上的情况下，则为解药，并且将服药者转化为狼人；- 当盒盖盒底都是表面向上的情况下，则为毒药l 丘比特先正常指定一对恋人（恋人A和恋人B），待这对恋人相互认识后，丘比特再次醒来，选择这对　恋人中的一位（如：恋人B），以及一个新的玩家（恋人C）。此后丘比特继续睡去，主持者唤醒恋　人B和C使之相认，然后他们让正常睡去于是：- 恋人B就变成了不忠的恋人；- 恋人C就变成了秘密情人；- 恋人A就变成被抛弃的恋人自此：- 当被抛弃的恋人A死去时，另外两位恋人B和C都不会死去；- 当不忠的恋人B死去时，另外两位恋人B和C都会死去；- 当秘密情人C死去时，只有不忠的恋人B会死去被抛弃的恋人不可以投票给不忠的恋人；但不忠的恋人可以投票给被抛弃的恋人；秘密情人与不忠的恋人之间禁止相互投票l 守卫只能保护他自己，或者他隔壁的两位玩家之一l 吹笛者每次只能对一名玩家施法●Gone hunting 去打猎男性玩家都离开村子去森林打猎了。他们在拂晓之前不会回来。他们既不参与讨论，也不参与投票。其他玩家不能投票给他们。此外，他们也不能被狼人吃掉（如果他们是村民）,或者吃掉村民（如果他们是狼人）。●Pact with the Devil 恶魔的契约在判决出来后，被裁定有罪的人可以马上与恶魔立下契约。这次他不会被吊死。但是请注意！如果游戏结束时，他是属于获胜者一方的，那么在下一次游戏中他或将被排除在外。（这是他与恶魔立约的代价……）●April Fools’ 四月的傻瓜某些角色将互换他们的能力：女巫和先知，猎人和小女孩，守卫和长者。至于恋人，他们憎恨对方，而且必须相互投对方的票。本回合，如果一个恋人死了，另一个恋人会存活下来，自此他们不再喜欢对方……）●Punishment 刑罚最后一个死去的人要付出代价，他将指定一个玩家。被指定的玩家将会死去，除非有至少两个人能证明他的清白。证人们要去轻吻被指定者的脸颊。如果证人迟迟不出现，被指定的玩家有权申诉，直到证人出现。●Great Distrust 惊人的不信任极度的不信任在村落中掠过。每个村民都得到两票用来指定他的两个最好的朋友。主持人给出信号的时候，玩家两手指出的那两票同时生效。如果有一个或者更多的玩家没有得到任何票数，那么他们将被吊死。（这个事件将取代平日投票）●Nightmare 梦魇村里的一个人在你的梦中出现，显示出了他是狼人的特质。村民们都惊醒了。在不经过讨论的情况下，从最后死去的玩家左手边起，每一个玩家必须指控一个村民。被指控次数最多的村民被淘汰。（这张牌取代日常投票）●Saint Philippe 圣-菲利普为了纪念伟大的跛脚菲利普，村子要选出一位真正被神所庇佑的领导者。原来的警长将会因为他的无能而被解雇，重新选出新的警长继任。新的警长要做出如下宣誓：“我将遵循菲利普的道路，保卫这个村庄。”●Good Manners良好的教养村民们要对其他人彬彬有礼：打扰任何人是被禁止的。每位村民要在主持人的监督下按次序发言。任何违反这个规定的玩家会失去这一轮的投票权。●Radiant Sunday 灿烂的周日所有人都得到了阳光的恩惠。并没有什么不寻常的事情发生。这是正常的一个回合，除非主持人决定使用“狼变的诱惑”这个变体规则。该变体规则为“在夜晚被狼人选中的村民不会死去而是被感染”具体如下：夜晚狼人如往常一样选定一个受害者，该受害者不会死去而是被感染。被感染者由主持人轻触告知。此后被感染者像往常一样游戏，如果他们是有能力的角色，那么将失去其能力。当狼人感染了倒数第二个村民的时候，游戏结束，狼人胜利。●Heads or Tails 正面或反面今天，村子要想独眼的赫维斯献上尊敬。主持人在判决作出后，立即通过抛硬币来为此判决争取一个宽恕的机会。正面：判决无效，被票选出的村民不会被处决。（该村民要大喊：‘哦！谢谢您！赫维斯！’）反面：判决有效，别票选出的村民依然被处决。（该村民要大喊：‘哦！我恨你！赫维斯！’）●Woodland Gathering 去林地采集所有女性的玩家都林地帮女巫采集草药了。她们直到日落才会回来。她们既不参与讨论，也不参与投票。其他玩家不能投票给她们。因此，女巫在天黑前额外获得一瓶药剂。（如果女巫已退出游戏，此卡无效）●Saturday Evening Ball 周六晚上的舞会这个晚上，年轻的村民会去跳舞直到黎明才会回来。（所有玩家报出年龄，然后所有游戏者中年龄偏小的那半数玩家为“去跳舞的人”）在他们回来之前，他们既不参与发言也不参与投票。那些“年老者”也不可以投票给他们。此外，他们也不能被狼人吃掉（如果他们是村民） ，或者吃掉村民（如果他们是狼人） 。●Eclipse 月蚀村民们看到一个残缺的月亮挂在天空，他们变得脾气暴躁，对他人不友善。玩家们背向圆心围坐，讨论时也不看着彼此。主持人要监督玩家不能违反这个规则。玩家们会在投票时恢复正常。●Flood 洪水洪水侵袭了村庄，女性玩家被安置在教堂里，男性玩家被安置在小旅店。这个白天没有投票。在接下来的夜晚，狼人必须也只能吃掉和自己在同一地方的难民。（也就是说这一晚有可能有两个遇难者。这张卡只能在至少有六名玩家存活时使用）★新月（延时有效，即直到触发条件生效为止）●The Specter鬼怪下一个被狼人指定的玩家，被主持人轻触并睁开双眼。狼人们仍然睁着眼，被轻触的玩家变成一只狼人，并且立即指定杀死一个老狼人。这个新狼人将替代之前的狼人。（主持人要在唤醒其他村民前，换掉上述两人的角色牌）●The little Rascal 小流氓村子里最年轻的玩家成为小流氓，他将去往邻村寻求援助。（小流氓要到另一个房间去，他既不参加讨论也不参加投票，同样也不会被杀死）他在第二天回到村庄，并且夺回他的地位，他的投票价值三票。（当然，其他的玩家要告诉他刚刚发生了什么）●Backfire 意外第二天的晚上，如果狼人指定的是一个普通的村民，那么该村民不会被杀死，而是变成了一只狼人。（主持人要换掉他的身份牌，并且小心的告知他）因此，该村民活了下来，而他左手边的第一只狼人将会死掉。（如果狼人们无法达成共识，则没有牺牲者）●Enthusiasm 群情激奋在意外结果的影响下，村民们因自己的“公平”而忘乎所以。如果下一个被杀死的玩家是狼人，村民们将被胜利冲昏头脑，从而再一次进行投票。本次投票没有讨论，直接吊死第二个嫌疑人。●Dissatisfaction 不满情绪村民们因糟糕的结果而倍受打击。如果下一个被杀死的玩家不是狼人，村民们感到很愤怒，于是再一次进行投票。本次投票没有讨论，直接吊死第二个嫌疑人。●Full moon rising 满月接下来的夜晚，狼人们变成了先知。他们将依次被唤醒并查看一个人的身份。猎人、女巫和先知变成了狼人，他们将在晚上一同醒来并处死一个人。（在接下来的早晨，一切恢复正常）●Influences 感染接下来的投票按顺序依次进行。（最后一个被杀死的玩家选择第一个投票者）第一个投票者指定一个玩家并保持姿势。此后，从第一个投票者左手边的玩家开始，依次以此方式投票。（投票结果照常）★暗月（即时生效直至游戏结束）●Burial葬礼当狼人们吃饱了，他们会埋葬牺牲者。从现在开始到游戏结束，被狼人杀死的人们的身份将不再向任何人展示。●Touch of Death 死之触现在开始到游戏结束，狼人必须触摸受害者才能吞食他们，否则就没有受害者。●Somnambulism 梦游预言家已经变成了一个梦游者。从现在开始到游戏结束，主持人会大声朗读出他所查看的玩家的身份。但是，玩家们仍然不知道他查看的是谁的身份。●Double agent 双重身份村民们沉睡了，第一个死去的人指定一个非狼人玩家睁开双眼。主持人向该玩家秘密地指出狼人，该玩家成为狼人的秘密盟友（但狼人们并不知道该玩家是盟友），他共享狼人的胜利。
    </string>
    <string name="isDead">死亡</string>
    <string name="isLiving">存活</string>
    <string name="citizenSkill">票</string>
    <string name="guardSkill">守护</string>
    <string name="hunterSkill">枪击</string>
    <string name="predictorSkill">验</string>
    <string name="wolfSkill">击杀</string>
    <string name="wizardPoison">毒</string>
    <string name="wizardCure">救</string>
    <string name="policeSkill">移交</string>
    <string name="game_nickname">游戏昵称:</string>
    <string name="optional">可选...</string>
    <string name="game_account">游戏账号:</string>
    <string name="gameRule">【游 戏 规 则】:</string>
    <string name="required">必填...</string>
    <string name="game_password">游戏密码:</string>
    <string name="nextStep">下一步</string>
    <string name="game_head">游戏头像:</string>
    <string name="modify">修改</string>
    <string name="reset_password_not_supported">当前版本暂不支持修改密码</string>
    <string name="finish">完 成</string>
    <string name="take_your_photo">拍张你的靓照吧！</string>
    <string name="top10">狼人杀TOP10</string>
    <string name="vote_record">投票记录：</string>
    <string name="out">被淘汰</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="score">积分</string>
    <string name="title">称号</string>
    <string name="choose">投给了</string>
    <string name="vote_result">投票结果是：</string>
    <string name="wolfKill_Voice">狼人杀--语音版</string>
    <string name="send_wolf">发消息给狼同伴...</string>
    <string name="WolfKill_Top">狼人杀排行榜</string>
    <string name="Pull_refresh">下拉刷新</string>
    <string name="wolf">狼人</string>
    <string name="seer">先知</string>
    <string name="witch">女巫</string>
    <string name="villager">村民</string>
    <string name="hunter">猎人</string>
    <string name="guard">守卫</string>
    <string name="police">警长</string>
    <string name="no_net">没网了</string>
    <string name="already_guard">上轮守护的玩家</string>
    <string name="server_address">服务器ip地址</string>
    <string name="modification_ip">修改ip</string>
    <string name="MyRoom">我的房间</string>
    <string name="RoomName">房间名称</string>
    <string name="time_leftover">剩余时间:</string>
    <string name="take_your_time">抓紧时间</string>
    <string name="wolf_chatRoom">狼人聊天室</string>
    <string name="send">发送</string>
    <string name="game_score">游戏积分:</string>
    <string name="game_title">游戏称号:</string>
    <string name="my_score">我的积分</string>
    <string name="back_to_hall">返回大厅</string>
    <string name="play_again">再来一局</string>
    <string name="prepare">准 备</string>
    <string name="unprepare">取消准备</string>
    <string name="mark">标记-</string>
    <string name="self_destroy">自爆</string>
    <string name="player_info">玩家详细信息</string>
    <string name="you_identity">你的身份是：</string>
    <string name="forget_password">忘记密码</string>
    <string name="type_your_account">请输入您的账号...</string>
    <string name="type_your_password">请输入密码...</string>
    <string name="register">注册账号</string>
</resources>
