<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wolf_bg"
    android:orientation="vertical">

    <include layout="@layout/network_state"/>

    <TextView
        android:layout_gravity="right"
        android:id="@+id/cannot_connect"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:textColor="@color/red"
        android:text="修改ip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:text="@string/game_account"
            android:textColor="@color/state"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/game_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/type_your_account"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:background="@drawable/edit_text_style_dark"
            android:ellipsize="end"
            android:maxLength="11"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/game_password"
            android:textColor="@color/state"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/game_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/type_your_password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_style_dark"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="5dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="15dp"
        android:text="@string/forget_password"
        android:textColor="@color/state"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

    <ImageButton
        android:id="@+id/game_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:src="@mipmap/startbutton" />

    <TextView
        android:id="@+id/game_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/state"
        android:text="@string/register"
        android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>
