<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wolf_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text=""
        android:textColor="#ffdd00"
        android:textSize="50sp"
        android:textStyle="italic|bold" />

    <ListView
        android:id="@+id/game_over_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:dividerHeight="5dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_score"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/game_over_myScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:ems="4"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_hall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_hall"
            android:background="@drawable/button_common"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button_common"
            android:textSize="20sp"/>

    </LinearLayout>
</LinearLayout>
